# wikigen

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
wiki_builder/: cli.py  config.py
wiki_builder/llm/: claude_api.py  openai_compat.py
wiki_builder/operations/: ingest.py  lint.py
wiki_builder/ui/: app.py  routes.py
wiki_builder/ui/templates/: base.html  index.html  ingest.html  lint.html  query.html
wiki_builder/wiki/: article.py  crossref.py  obsidian.py
